# bitblast-testing-env

./: README.md  api-documentation.md  pipeline.py
DBaaS_template/: apiconfig.js  package.json
DBaaS_template/src/: App.vue  main.js
DBaaS_template/src/Documentation/: Documentation.vue
DBaaS_template/src/examples/: Breadcrumbs.vue
DBaaS_template/src/mixins/: InactivityMixins.js
DBaaS_template/src/router/: index.js
DBaaS_template/src/store/: index.js
DBaaS_template/src/views/: ADauthprovider.vue  ADgrouplist.vue  ADsave.vue  ADuserForm.vue  ADuserlist.vue  ActivityLog.vue  Backup.vue  BackupDetails.vue  BackupForm.vue  BackupSchedule.vue  Clusters.vue  Dashboard.vue  ManageProvider.vue  (+10 more)
DBaas_project/: .env  db.sqlite3  pyproject.toml  requirements.txt
DBaas_project/ADSapp/: consumers.py  routing.py  serializers.py  urls.py  views.py
DBaas_project/DBaas_project/: asgi.py  settings.py  urls.py
DBaas_project/backup_app/: urls.py  views.py
DBaas_project/project_api/: models.py  urls.py  views.py
DBaas_project/project_api/migrations/: 0001_initial.py  0002_alter_cluster_options_alter_project_options_and_more.py  0003_cluster_k8s_key_name.py
DBaas_project/provider1_api/: admin.py  models.py  serializers.py  urls.py  views.py
DBaas_project/provider1_api/migrations/: 0001_initial.py  0002_add_default_providers.py  0003_add_new_providers.py  0004_provider_k8s_key_name.py
DBaas_project/userAuth_app/: models.py  permissions.py  serializers.py  urls.py  views.py
DBaas_project/userAuth_app/migrations/: 0001_initial.py  0002_alter_user_is_active.py
(+35 files in other folders)
